fix: no scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,6 @@
 
 #root {
 	width: 100%;
-	min-height: 100vh;
+	min-height: 100dvh;
 	background-color: #181818;
 }
